--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,17 +12,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.3",
+    "@angular/cdk": "^11.2.9",
     "@angular/common": "~11.2.3",
     "@angular/compiler": "~11.2.3",
     "@angular/core": "~11.2.3",
     "@angular/forms": "~11.2.3",
+    "@angular/material": "^11.2.9",
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "ng2-order-pipe": "^0.1.5",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-bootstrap": "^6.2.0",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.16.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
