--- a/BackEnd/SocietyFinancialManagement/src/main/resources/application.properties
+++ b/BackEnd/SocietyFinancialManagement/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port= 8080
-spring.datasource.url=jdbc:mysql://localhost/#
+spring.datasource.url=jdbc:mysql://localhost/sfm
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
