--- a/BackEnd/SocietyFinancialManagement/src/main/resources/application.properties
+++ b/BackEnd/SocietyFinancialManagement/src/main/resources/application.properties
@@ -6,3 +6,17 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
+
+
+
+spring.mail.host = smtp.gmail.com
+# spring.mail.username = @gmail.com
+# spring.mail.password = 
+
+#Below Properties are needed for maintaining the session.
+#Two Step verification should not be enabled for gmail.
+
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback = false
