--- a/BackEnd/SocietyFinancialManagement/src/main/resources/application.properties
+++ b/BackEnd/SocietyFinancialManagement/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+jwt.secret = loki@123
+jwt.expirationDateInMs=10000
+jwt.refreshExpirationDateInMs=10000
+
 server.port= 8080
 spring.datasource.url=jdbc:mysql://localhost/sfm
 spring.datasource.username=root
@@ -6,9 +10,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
-
-
-
+management.security.enabled=false
 spring.mail.host = smtp.gmail.com
 # spring.mail.username = @gmail.com
 # spring.mail.password = 
